--- a/index.html
+++ b/index.html
@@ -1,22 +1,73 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
+    <meta charset="UTF-8">
+    <title>Interaktivní stránka</title>
+
     <script>
         document.addEventListener('DOMContentLoaded', () => {
+
+            // 3) Uživatel zadá a změní text
+            document.querySelector('#set-text').addEventListener('click', () => {
+                const inputValue = document.querySelector('#user-text').value;
+                if (inputValue.trim() !== "") {
+                    document.querySelector('#hello').textContent = inputValue;
+                } else {
+                    alert("Musíš nejdříve něco napsat!");
+                }
+            });
+
+            // 1) Měnění barvy textu
+            document.querySelector('#color-change').addEventListener('change', function () {
+                document.querySelector('#hello').style.color = this.value;
+            });
+
+            // 2) Měnění velikosti textu
             document.querySelector('#text-size').addEventListener('change', function () {
-                document.querySelector('#title').style.fontSize = this.value + 'px';
+                document.querySelector('#hello').style.fontSize = this.value + 'px';
+            });
+
+            // 4) Změna pozadí stránky
+            document.querySelector('#background-select').addEventListener('change', function () {
+                document.body.style.backgroundColor = this.value;
             });
         });
     </script>
-    <title>Velikost textu</title>
+
 </head>
+
 <body>
-    <h1 id="title">Ahoj světe!</h1>
-    <select id="text-size">
-        <option value="20">20px</option>
-        <option value="30">30px</option>
-        <option value="40">40px</option>
-        <option value="50">50px</option>
+    <h1 id="hello" style="font-size: 40px;">Ahoj!</h1>
+
+    <h3>Napiš svůj text:</h3>
+    <input type="text" id="user-text" placeholder="Zadej text sem">
+    <button id="set-text">Změň text</button>
+
+    <h3>Vyber barvu textu:</h3>
+    <select id="color-change">
+        <option value="white">bílá</option>
+        <option value="lightpink">růžová</option>
+        <option value="lightblue">modrá</option>
+        <option value="lightgreen">zelená</option>
+        <option value="purple">fialová</option>
     </select>
+
+    <h3>Vyber velikost textu:</h3>
+    <select id="text-size">
+        <option value="30">30px</option>
+        <option value="50" selected>50px</option>
+        <option value="70">70px</option>
+        <option value="90">90px</option>
+    </select>
+
+    <h3>Vyber barvu pozadí:</h3>
+    <select id="background-select">
+        <option value="black">černá</option>
+        <option value="navy">modrá</option>
+        <option value="darkred">červená</option>
+        <option value="darkgreen">zelená</option>
+        <option value="deeppink">růžová</option>
+    </select>
+
 </body>
 </html>
