--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
     <h3>Vyber barvu textu:</h3>
     <select id="color-change">
+        <option value="black">černá</option>
         <option value="white">bílá</option>
         <option value="lightpink">růžová</option>
         <option value="lightblue">modrá</option>
@@ -62,7 +63,8 @@
 
     <h3>Vyber barvu pozadí:</h3>
     <select id="background-select">
-        <option value="black">černá</option>
+        <option value="white">bílá</option>
+        <option value="darkgrey">šedá</option>
         <option value="navy">modrá</option>
         <option value="darkred">červená</option>
         <option value="darkgreen">zelená</option>
