--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Interaktivní stránka</title>
 
     <script>
@@ -42,6 +43,7 @@
 </head>
 
 <body>
+    <div class="container">
     <h1 id="hello" style="font-size: 40px;">Ahoj!</h1>
 
     <h3>Napiš svůj text:</h3>
@@ -67,7 +69,7 @@
         <option value="60">60px</option>
         <option value="70">70px</option>
     </select>
-    
+
     <h3>Vyber font:</h3>
     <select id="font-select">
         <option value="Arial" selected>Arial</option>
@@ -86,6 +88,6 @@
         <option value="darkgreen">zelená</option>
         <option value="deeppink">růžová</option>
     </select>
-
+    </div>
 </body>
 </html>
