--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <select id="text-size">
         <option value="20">20px</option>
         <option value="30">30px</option>
-        <option value="40"selected>40px</option>
+        <option value="40" selected>40px</option>
         <option value="50">50px</option>
         <option value="60">60px</option>
         <option value="70">70px</option>
@@ -103,5 +103,12 @@
         <option value="deeppink">růžová</option>
     </select>
     </div>
+    <footer>
+        <p>
+                <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fkaterinajasurkova.github.io%2Fjava-pomoci-ai" target="_blank"><img src="https://www.w3.org/Icons/valid-html20-blue" alt="Ověřit HTML"></a>
+                
+                <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkaterinajasurkova.github.io%2Fportfolio&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=cs"><img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Ověřit CSS!" /></a>
+        </p>
+    </footer>
 </body>
 </html>
